play bot endpoint and compute endpoints added
